--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <label for="theme-switch">
             <span id="theme-label">Light Mode</span>
         </label>
+    <footer>
+        <a href="https://github.com/mandarwagh9/random-quote-generator" target="_blank" class="github-link">View on GitHub</a>
+    </footer>
     </div>
     <script src="script.js"></script>
 </body>
