--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="light-mode">
     <div class="container">
-        
+        <h1>Random Quote Generator</h1>
         <div class="quote-box">
             <p id="quote">Click "New Quote" to get a random quote.</p>
             <p id="author">- Author</p>
@@ -28,10 +28,10 @@
         <label for="theme-switch">
             <span id="theme-label">Light Mode</span>
         </label>
+    </div>
     <footer>
         <a href="https://github.com/mandarwagh9/random-quote-generator" target="_blank" class="github-link">View on GitHub</a>
     </footer>
-    </div>
     <script src="script.js"></script>
 </body>
 </html>
